Finalize visual + real board feature
Step 1 of communicating with server